INTEGRATION: CWS qadev20 (1.5.4); FILE MERGED 2004/11/22 12:26:39 sg 1.5.4.1: #i37187#CHG: removed functions that were not jdk131 compatible